--- a/styles/style.css
+++ b/styles/style.css
@@ -1,32 +1,81 @@
-/**************/
-/* CSS REMEDY */
-/**************/
 *, *::after, *::before {
   box-sizing:border-box;
+  overflow-x: hidden;
   margin: 0;
   padding: 0;  
+
 }
 
-
-/*********************/
-/* CUSTOM PROPERTIES */
-/*********************/
 :root {
 	--header-background: #00619d ;
 	--color-text:#111;
-	--color-background:#eee;
+	--color-background: rgb(233,234,237);
+
+	--section-background: #eee; 
+
+	--hover-text: #2196f3; 
+
 	--footer-background: rgb(42,43,60);
+	--footer-tekst: #eee; 
 }
 
 
 /****************/
-/* JOUW STYLING */
-/****************/
+body{ 
+	background-color: var(--color-background);
+}
+
 header{
  background-color: var(--header-background);
 }
 
+main{
+	
+	margin: 1em;
+	/** GRID
+	display: grid;
+	gap: 1em; 
+	grid-template-columns: 1fr 1fr;
+	**/
+
+}
+
 footer{
  background-color: var(--footer-background);
+ color: var(--footer-tekst);
+ 
 }
+
+main section{
+	background-color: var(--section-background);
+	margin: 1em;
+	padding: 1em;
+}
+
+ /* section ul{
+	overflow: auto;
+	white-space: nowarp;
+	margin: 1em;
+
+}
+
+section ul li{
+	display: inline-block;
+} */
+
+a{
+	text-decoration: none;
+	color: var(--color-text);
+}
+
+a:hover{
+	text-decoration: none;
+	color: var(--hover-text);
+}
+
+img{
+	width: 7em;
+}
+
+
 
