--- a/styles/index.css
+++ b/styles/index.css
@@ -14,9 +14,20 @@
 	--hover-text: #2196f3; 
 }
 
-section:nth-last-of-type(1) p {
-    
+/*section 2*/
+section:nth-last-of-type(2) ul li { 
+        display: grid;
+        grid-template-columns: 0.5fr 1fr;
+        grid-template-rows: repeat(3, 1fr);
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+
 }
+
+/*section 4*/
+section:nth-last-of-type(4) img { 
+    width: 9.3em; 
+} 
 
 section:nth-last-of-type(4) ul { 
     overflow: auto; 
@@ -27,5 +38,13 @@ section:nth-last-of-type(4) ul {
 
 section:nth-last-of-type(4) ul li { 
     display: inline-block;
-    
 } 
+
+section:nth-last-of-type(4) ul li p { 
+    padding: 0.2em;
+} 
+
+section:nth-last-of-type(4) ul li a p { 
+    color: var(--hover-text);
+} 
+
