--- a/styles/style.css
+++ b/styles/style.css
@@ -123,7 +123,6 @@ header button {
 
 
 main{
-	
 	margin: 1em;
 	/** GRID
 	display: grid;
@@ -137,7 +136,9 @@ main section{
 	background-color: var(--section-background);
 	margin: 1em;
 	padding: 1em;
-	filter: drop-shadow(0 0 0.25rem var(--drop-shadow));
+
+	/*filter: drop-shadow(0 0 0.25rem var(--drop-shadow));*/
+
 }
 
 main ul li a{
@@ -154,10 +155,15 @@ h1{
 	font-size: 2em;
 }
 
+h3{
+	font-size: 1em;
+}
+
 img{
 	width: 7em;
 }
 
+/*FOOOOOTERR*/
 footer{
 	 background-color: var(--footer-background);
 	color: var(--footer-tekst);
