--- a/styles/index.css
+++ b/styles/index.css
@@ -15,6 +15,7 @@
 }
 
 /*section 2*/
+    /*eerste ul*/
 section:nth-of-type(2) ul{
     overflow: auto; 
     white-space: nowrap; 
@@ -25,18 +26,15 @@ section:nth-of-type(2) ul:nth-of-type(1) li {
     display: inline-block;
 
     margin-left: 1em;
-
 }
 
-
+      /*tweede ul*/
 section:nth-of-type(2) ul li { 
         display: grid;
         grid-template-columns: 0.5fr 1fr;
         grid-template-rows: repeat(3, 1fr);
         grid-column-gap: 0px;
         grid-row-gap: 0px;
-
-
 }
 
 section:nth-of-type(2) img{
