--- a/styles/style.css
+++ b/styles/style.css
@@ -67,11 +67,6 @@ header button {
 	width: 2em;
   }
 
-
-  header > button {
-	order: -1;
-  }
-
   nav {
 	padding:1em;
 	
@@ -83,7 +78,7 @@ header button {
 	position: fixed;
 	inset: 0;
 	translate: 100%;       
-	  transition: 1s;
+	transition: 1s;
   }
 
   nav.toonMenu {
@@ -116,8 +111,9 @@ header button {
   
 
   nav button {
-	justify-self:start;
+	justify-self:end;
 	background-color: var(--nav-background);
+	position: absolute ;
    }
   
 
