--- a/styles/style.css
+++ b/styles/style.css
@@ -23,132 +23,89 @@
 	--footer-tekst: #eee; 
 }
 
-
-/****************/
-body{ 
+body{
 	background-color: var(--color-background);
 }
 
 header{
- 	background-color: var(--header-background);
-/*BURGER MENU CODE VAN DE LES*/
-	 display: flex; 
-	 justify-content: space-between;
-	 align-items: center; 
+	background-color: var(--header-background);
+	padding: .5em;
 
+/*BURGER MENU + CODE VAN DE LES*/
+	display: flex;
+	align-items: center;
 }
+
+header img {
+	height:100%;
+	width: 3em;
+} 
 
 header a{
-	padding:.5em 0;
-	color:var(--general-color);
 	text-decoration:none;
-
 }
 
-header button {
-	padding:.5em;
-	
-	/* icon en tekst met gap-je naast elkaar */
-	display:flex;
-	align-items:center;
-	gap:.25em;
-	
-	/* standaard styling aanpassen */
-	background-color:var(--header-background);
-	border:none;
-	border-radius:.25em; 
-	font:inherit;
-	text-align:center;
-	color:var(--button-color);
-  }
-  
-  header button img {
-	height:2em;
-	width: 2em;
-  }
+header button{
+	display: flex; 
+	align-items: center;
+	gap: .25em;
 
-  nav {
-	padding:1em;
-	
-	display:grid;
-	align-content:flex-end;
-	gap:1em;
-	
-	background: var(--nav-background);
+	background-color: var(--header-background);
+	border: none;	
+}
+
+header button img {
+	height:100%;
+	width: 2em;
+}
+
+nav{
+	padding: 1em;
+	background-color: var(--header-background);
+
+	display: grid; 
+
 	position: fixed;
 	inset: 0;
 	translate: 100%;       
 	transition: 1s;
-  }
+}
 
-  nav.toonMenu {
+nav.toonMenu {
 	translate: 0;
   }
 
-  nav ul { 
-	margin:0; 
-	padding:0em;
-	list-style:none;
-  }
-
-  nav a {
-	/* icon en tekst met gap-je naast elkaar */
+nav a{
 	display:flex;
 	align-items:center;
 	column-gap:.25em;
-	
-	border-bottom:solid 1px var(--menu-border);
-  }
-  
-  nav a img {
-	width:auto;
-	height:2em;
-  }
-  
-  nav a.active {
-	font-weight:bold;
-  }
-  
+}
 
   nav button {
 	justify-self:end;
 	background-color: var(--nav-background);
 	position: absolute ;
    }
-  
 
+header nav button{
+	background-color: var(--header-background);
+	padding: 1em;
+}
+/*EIND*****BURGER MENU + CODE VAN DE LES****/
 
 main{
 	margin: 1em;
-	/** GRID
-	display: grid;
-	gap: 1em; 
-	grid-template-columns: 1fr 1fr;
-	**/
-
 }
 
 main section{
 	background-color: var(--section-background);
 	margin: 1em;
 	padding: 1em;
-
-	/*filter: drop-shadow(0 0 0.25rem var(--drop-shadow));*/
-
-}
-
-main ul li a{
-	text-decoration: none;
-	color: var(--color-text);
-}
-
-main ul li a:hover{
-	text-decoration: none;
-	color: var(--hover-text);
 }
 
 h1{
 	font-size: 2em;
+	padding: .5em;
 }
 
 h3{
@@ -159,27 +116,31 @@ img{
 	width: 7em;
 }
 
-/*FOOOOOTERR*/
+/****footer****/
 footer{
-	 background-color: var(--footer-background);
-	color: var(--footer-tekst);
- 	padding: 1em;
+	background-color: var(--footer-background);
+   color: var(--footer-tekst);
+	padding: 1em;
 }
 
 footer a{
-	color: var(--footer-tekst);
-	text-decoration:none;
+   color: var(--footer-tekst);
+   text-decoration:none;
 }
 
+footer img{
+width: 10em;
+}
+
+footer h3{
+	text-transform: uppercase;
+}
 footer section{
-	margin: 1em;
+   margin: 1em;
 }
 
 footer ul li{
-	margin: 0;
-	padding: 0;
+   margin: 0;
+   padding: 0;
 }
-
-
-
-
+/*EIND*****footer****/
