--- a/styles/style.css
+++ b/styles/style.css
@@ -59,6 +59,10 @@ header button img {
 	width: 2em;
 }
 
+header button:nth-of-type(1){
+	order: 4;
+}
+
 nav{
 	margin-left: 3em;
 	padding: 2em;
@@ -107,6 +111,10 @@ main section{
 h1{
 	font-size: 2em;
 	padding: .5em;
+}
+
+h2{ 
+	font-size: 1.5em;
 }
 
 h3{
