--- a/styles/index.css
+++ b/styles/index.css
@@ -5,25 +5,50 @@
 }
 
 :root {
-	--header-background: #00619d ;
-	--color-text:#111;
-	--color-background: rgb(233,234,237);
+    --header-background: #00619d ;
+    --nav-background:#dcdfe6;
 
-	--nav-background:#dcdfe6;
+	--color-text:#111;
+    --blauw-text: #2196f3; 
+	--color-background: rgb(233,234,237);
 
 	--section-background: #ffffff; 
     --section-border: rgb(197, 197, 197);
 
-	--blauw-text: #2196f3; 
+    --drop-shadow: rgba(0, 0, 0, 0.1);
 
 	--footer-background: rgb(42,43,60);
 	--footer-tekst: #eee; 
 }
 
 /*section 1*/
+
+
 section:nth-of-type(1) li:nth-of-type(1) img{
     width: 100%;
 }
+
+/* Robinson, B. L. (2018, 30 april). Use CSS ::before and ::after for simple, spicy image overlays. bryanlrobinson.com. https://bryanlrobinson.com/blog/how-to-css-after-elements-for-background-overlays/ */
+
+section:nth-of-type(1) li:nth-of-type(1) img::after{
+    content: "";
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-color: #00619d;
+    opacity: .5;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    
+    /* diepte */
+    z-index: 90;
+}
+
+section:nth-of-type(1) li:nth-of-type(1){
+    position: relative;
+} 
 
 main section:nth-of-type(1) {
     position: relative;
@@ -34,13 +59,12 @@ main section:nth-of-type(1) {
 
 main section:nth-of-type(1) ul  {
     display: flex;
-    transition: transform 0.5s ease-in-out;
+    /* transition: transform 0.5s ease-in-out; */
     will-change: transform;
 }
 
 main section:nth-of-type(1) li {
     min-width: 100%;
- 
 }
 
 main section:nth-of-type(1) h2 {
@@ -60,7 +84,6 @@ main section:nth-of-type(1) p {
 
     position: absolute;
     bottom: 5em;
-
 }
 
 main section:nth-of-type(1) button {
@@ -84,41 +107,123 @@ button.next {
     right: 10px;
 }
 
-button:hover {
+/* button:hover {
     background-color: rgba(0, 0, 0, 0.8);
-}
+} */
 /*EIND***section 1*/
 
 /*section 2*/
+    
+main section:nth-of-type(2) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    row-gap: 1em;
+}
+
+main section:nth-of-type(2) a{
+    text-decoration: none;
+}
     /*eerste ul*/
-    main section:nth-of-type(2) ul{
-        overflow: auto; 
-        white-space: nowrap; 
-        margin: 1em; 
-    }
+main section:nth-of-type(2) ul:nth-of-type(1){
+    overflow: auto;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    gap: 1em;
+}
     
-    main section:nth-of-type(2) ul:nth-of-type(1) li { 
-        display: inline-block;
-    
-        margin-left: 1em;
-    }
+main section:nth-of-type(2) ul:nth-of-type(1) li { 
+    display: inline-block;
+}
     
     /*tweede ul*/
-    main section:nth-of-type(2) ul li { 
-            display: grid;
-            grid-template-columns: 0.5fr 1fr;
-            grid-template-rows: repeat(3, 1fr);
-            grid-column-gap: 0px;
-            grid-row-gap: 0px;
-    }
+main section:nth-of-type(2) ul:nth-of-type(2) li{ 
+    display: grid;
+
+    border-top: 1px solid var(--nav-background);
+    border-bottom: 1px solid var(--nav-background);
+}
+
+main section:nth-of-type(2) ul:nth-of-type(2) a{
+    display: grid;
+    grid-template-columns: 0.5fr 1fr;
+    grid-template-rows: 0.4fr 1fr;
+}
+
+main section:nth-of-type(2) ul:nth-of-type(2) h3{
+    grid-column: 2;
+    grid-row: 2;
+
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: 0.5em;
+
+}
+
+main section:nth-of-type(2) ul:nth-of-type(2) p{
+    grid-column: 2;
+    grid-row: 1;
+
+    color: var(--blauw-text);
+    text-transform: uppercase;
+    margin-left: 0.5em;
     
-    main section:nth-of-type(2) img{
-        width: 6em;
-    }
-    
+}
+
+main section:nth-of-type(2) a img{
+    width: 100%;
+    grid-row: 1/3;
+}
+
+main section:nth-of-type(2) > a{
+    border: 1px solid var(--nav-background);
+    padding: 10px;
+    color: var(--color-text);
+    text-decoration: none;
+    cursor: pointer;
+    display: inline-block;
+    text-align: center;
+
+    box-shadow: 0 0 6px var(--drop-shadow);
+}
 /*EIND***section 2*/
 
 /*section 3*/
+main section:nth-of-type(3) img { 
+    width: 9.3em; 
+} 
+
+main section:nth-of-type(3) ul { 
+    overflow: auto; 
+    white-space: nowrap; 
+    margin: 1em; 
+} 
+
+main section:nth-of-type(3) ul li { 
+    display: inline-block;
+    padding: 0;
+    padding-left: 0.5em;
+
+} 
+
+main section:nth-of-type(3) ul li p { 
+    padding: 0.2em;
+
+} 
+
+main section:nth-of-type(3) ul li a p { 
+    color: var(--hover-text);
+    font-weight: bold;
+} 
+
+main section:nth-of-type(3) a  { 
+text-decoration: none;
+}
+
+
+
 /*EIND***section 3*/
 
 /*section 4*/
@@ -141,19 +246,55 @@ main section:nth-of-type(4) ul li {
 
 main section:nth-of-type(4) ul li p { 
     padding: 0.2em;
-
 } 
 
 main section:nth-of-type(4) ul li a p { 
     color: var(--hover-text);
     font-weight: bold;
 } 
+
+main section:nth-of-type(4) a  { 
+    text-decoration: none;
+    }
 /*EIND***section 4*/
 
 /*section 5*/
 /*EIND***section 5*/
 
 /*section 6*/
+main section:nth-of-type(6) ul{
+    display: flex;
+    position: relative;
+    padding-left: 2em;
+
+    /* flex-direction: row-reverse;
+    justify-content: start; */
+}
+   
+
+main section:nth-of-type(6) li{
+    position: relative;
+    transition: transform 0.3s ease;
+    transform: scale(90%); 
+    
+    margin-left: -30px; 
+}
+
+main section:nth-of-type(6) li:hover{
+    transform: scale(100%); 
+    z-index: 20; 
+}
+
+main section:nth-of-type(6) li img{
+    box-shadow: 0 0 6px var(--drop-shadow);
+    transition: all 0.3s ease;
+    object-fit: cover;
+
+    width: 100%;
+    border-radius: .5em;
+
+}
+
 /*EIND***section 6*/
 
 /*section 7*/
