--- a/styles/index.css
+++ b/styles/index.css
@@ -149,7 +149,7 @@ main section:nth-of-type(2) ul:nth-of-type(2) li{
 main section:nth-of-type(2) ul:nth-of-type(2) a{
     display: grid;
     grid-template-columns: 0.5fr 1fr;
-    grid-template-rows: 0.4fr 1fr;
+    grid-template-rows: 0.2fr 0.8fr 0.6fr ;
 }
 
 main section:nth-of-type(2) ul:nth-of-type(2) h3{
@@ -162,19 +162,29 @@ main section:nth-of-type(2) ul:nth-of-type(2) h3{
 
 }
 
-main section:nth-of-type(2) ul:nth-of-type(2) p{
+main section:nth-of-type(2) ul:nth-of-type(2) p:nth-of-type(1){
     grid-column: 2;
     grid-row: 1;
 
     color: var(--blauw-text);
     text-transform: uppercase;
+    font-size: .9em;
+    margin-left: 0.5em;
+}
+
+main section:nth-of-type(2) ul:nth-of-type(2) p:nth-of-type(2){
+    grid-column: 2;
+    grid-row: 3;
+
+    color: var(--color-text);
+    font-size: .9em;
     margin-left: 0.5em;
     
 }
 
 main section:nth-of-type(2) a img{
     width: 100%;
-    grid-row: 1/3;
+    grid-row: 1/4;
 }
 
 main section:nth-of-type(2) > a{
