--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,6 @@
 *, *::after, *::before {
     box-sizing:border-box;
-    overflow-x: hidden;
-  
+    /* overflow-x: hidden; */
 }
 
 :root {
@@ -126,7 +125,7 @@ main section:nth-of-type(2) a{
 }
     /*eerste ul*/
 main section:nth-of-type(2) ul:nth-of-type(1){
-    overflow: auto;
+    overflow: initial;
     width: 100%;
     display: flex;
     align-items: center;
