--- a/styles/style.css
+++ b/styles/style.css
@@ -69,7 +69,7 @@ header button img {
 
 header button:nth-of-type(1){
 	order: 4;
-	
+
 }
 
 nav{
@@ -130,6 +130,10 @@ h2{
 
 h3{
 	font-size: 1em;
+}
+
+li { 
+    list-style: none;
 }
 
 img{
