--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,8 @@
 :root {
 	--header-background: #00619d ;
 	--color-text:#111;
+	--gray-text: #7a7a7a;
+	--blauw-text: #1b92e4;
 	--color-background: rgb(233,234,237);
 
 	--nav-background:#dcdfe6;
@@ -43,9 +45,18 @@ header section{
 	display: flex;
 }
 
-header img {
+header section button{
+	padding: 0.5em;
+}
+
+header section button:nth-of-type(4) img{
 	height:100%;
 	width: 3em;
+}
+
+header img {
+	height:100%;
+	width: 4em;
 } 
 
 header a{
