--- a/styles/index.css
+++ b/styles/index.css
@@ -89,7 +89,7 @@ main section:nth-of-type(1) button {
     top: 50%;
     transform: translateY(-50%);
     background-color: rgba(0, 0, 0, 0.5);
-    color: white;
+    color: var(--section-background);
     border: none;
     padding: 10px;
     cursor: pointer;
@@ -105,9 +105,6 @@ button.next {
     right: 10px;
 }
 
-/* button:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-} */
 /*EIND***section 1*/
 
 /*section 2*/
@@ -213,10 +210,6 @@ main section:nth-of-type(2) > a{
 /*EIND***section 2*/
 
 /* SECTION 3 + 4 */
-main section:nth-of-type(3) img, main section:nth-of-type(4) img { 
-    width: 9.3em; 
-} 
-
 main section:nth-of-type(3) ul, main section:nth-of-type(4) ul { 
     overflow: auto; 
     white-space: nowrap; 
@@ -227,12 +220,18 @@ main section:nth-of-type(3) ul li, main section:nth-of-type(4) ul li {
     display: inline-block;
     padding: 0;
     padding-left: 0.5em;
+} 
 
+main section:nth-of-type(3) ul li a , main section:nth-of-type(4) ul li a  { 
+    text-decoration: none;
+}
+
+main section:nth-of-type(3) img, main section:nth-of-type(4) img { 
+    width: 9.3em; 
 } 
 
 main section:nth-of-type(3) ul li p, main section:nth-of-type(4) ul li p { 
     padding: 0.2em;
-
 } 
 
 main section:nth-of-type(3) ul li a p, main section:nth-of-type(4) ul li a p { 
@@ -240,14 +239,9 @@ main section:nth-of-type(3) ul li a p, main section:nth-of-type(4) ul li a p {
     font-weight: bold;
 } 
 
-main section:nth-of-type(3) ul li a , main section:nth-of-type(4) ul li a  { 
-    text-decoration: none;
-}
 /* EIND SECTION 3 + 4 */
 
 /*section 4*/
-
-
 /*EIND***section 4*/
 
 /*section 5*/
@@ -259,9 +253,6 @@ main section:nth-of-type(6) ul{
     display: flex;
     position: relative;
     padding-left: 2em;
-
-    /* flex-direction: row-reverse;
-    justify-content: start; */
 }
    
 
@@ -285,14 +276,11 @@ main section:nth-of-type(6) li img{
 
     width: 100%;
     border-radius: .5em;
-
 }
-
-
 
 /*EIND***section 6*/
 
-
+/* section  */
 /*EIND***section 7*/
 
 /* Alle sections */
