--- a/styles/index.css
+++ b/styles/index.css
@@ -209,43 +209,52 @@ main section:nth-of-type(2) > a{
 }
 /*EIND***section 2*/
 
-/* SECTION 3 + 4 */
-main section:nth-of-type(3) ul, main section:nth-of-type(4) ul { 
+/* SECTION 3 + 4 + 5*/
+main section:nth-of-type(3) ul, main section:nth-of-type(4) ul, main section:nth-of-type(5) ul { 
     overflow: auto; 
     white-space: nowrap; 
     margin: 1em; 
 } 
 
-main section:nth-of-type(3) ul li, main section:nth-of-type(4) ul li { 
+main section:nth-of-type(3) ul li, main section:nth-of-type(4) ul li, main section:nth-of-type(5) ul li  { 
     display: inline-block;
     padding: 0;
     padding-left: 0.5em;
 } 
 
-main section:nth-of-type(3) ul li a , main section:nth-of-type(4) ul li a  { 
+main section:nth-of-type(3) ul li a , main section:nth-of-type(4) ul li a, main section:nth-of-type(5) ul li a  { 
     text-decoration: none;
 }
 
 main section:nth-of-type(3) img, main section:nth-of-type(4) img { 
     width: 9.3em; 
+
 } 
 
-main section:nth-of-type(3) ul li p, main section:nth-of-type(4) ul li p { 
+main section:nth-of-type(3) ul li p, main section:nth-of-type(4) ul li p, main section:nth-of-type(5) ul li p { 
     padding: 0.2em;
 } 
 
-main section:nth-of-type(3) ul li a p, main section:nth-of-type(4) ul li a p { 
+main section:nth-of-type(3) ul li > p, main section:nth-of-type(4) ul li > p, main section:nth-of-type(5) ul li > p { 
+    font-size: 0.9em;
+} 
+
+main section:nth-of-type(3) ul li a p, main section:nth-of-type(4) ul li a p, main section:nth-of-type(5) ul li a p { 
     color: var(--hover-text);
     font-weight: bold;
 } 
 
-/* EIND SECTION 3 + 4 */
+/* EIND SECTION 3 + 4 + 5*/
 
 /*section 4*/
 /*EIND***section 4*/
 
 /*section 5*/
-
+main section:nth-of-type(5) img{ 
+    width: 9.4em; 
+    height: 200px;
+    object-fit: cover;
+} 
 /*EIND***section 5*/
 
 /*section 6*/
@@ -280,7 +289,30 @@ main section:nth-of-type(6) li img{
 
 /*EIND***section 6*/
 
-/* section  */
+/* section 7  */
+main section:nth-of-type(7) ul{
+    overflow: auto; 
+    white-space: nowrap; 
+    margin: 1em; 
+}
+
+main section:nth-of-type(7) ul li{ 
+    display: inline-block;
+
+}
+
+main section:nth-of-type(7) a{
+    text-decoration: none;
+}
+
+main section:nth-of-type(7) a h3{
+    color: var(--hover-text);
+}
+
+main section:nth-of-type(7) a p{
+    color: var(--color-text);
+}
+
 /*EIND***section 7*/
 
 /* Alle sections */
