--- a/styles/style.css
+++ b/styles/style.css
@@ -1,181 +1,184 @@
 *, *::after, *::before {
-  box-sizing:border-box;
-  margin: 0;
-  padding: 0;  
-
-  font-family: sans-serif;
-
-}
-
-:root {
-	--header-background: #00619d ;
-	--color-text:#111;
-	--gray-text: #7a7a7a;
-	--blauw-text: #1b92e4;
-	--color-background: rgb(233,234,237);
-
-	--nav-background:#dcdfe6;
-
-	--section-background: #ffffff; 
-
-	--hover-text: #2196f3; 
-	--drop-shadow: rgb(197, 197, 197);
-
-	--footer-background: rgb(42,43,60);
-	--footer-tekst: #eee; 
-}
-
-body{
-	background-color: var(--color-background);
-}
-
-header{
-	background-color: var(--header-background);
-	padding: .5em;
-
-/*BURGER MENU + CODE VAN DE LES*/
-	display: flex;
-	align-items: center;
-
-	justify-content: space-between;
-}
-
-/* KIJKEN OF NAV??? */
-header section{
-	display: flex;
-}
-
-header section button{
-	padding: 0.5em;
-}
-
-header section button:nth-of-type(4) img{
-	height:100%;
-	width: 3em;
-}
-
-header img {
-	height:100%;
-	width: 4em;
-} 
-
-header a{
-	text-decoration:none;
-	color:var(--color-text)
-}
-
-header button{
-	display: flex; 
-	align-items: center;
-	gap: .25em;
-
-	background-color: var(--header-background);
-	border: none;	
-}
-
-header button img {
-	height:100%;
-	width: 2em;
-}
-
-header button:nth-of-type(1){
-	order: 4;
-
-}
-
-nav{
-	margin-left: 3em;
-	padding: 2em;
-	background-color: var(--nav-background);
-
-	display: grid; 
-
-	position: fixed;
-	z-index: 100; /*  boven de position:... elementen uit komen */
-	inset: 0;
-	translate: 100%;       
-	transition: 1s;
-}
-
-nav.toonMenu {
-	translate: 0;
-	position: absolute;
+	box-sizing:border-box;
+	margin: 0;
+	padding: 0;  
+  
+	font-family: sans-serif;
+  
   }
+  
+  :root {
+	  --header-background: #00619d ;
+	  --color-text:#111;
+	  --gray-text: #7a7a7a;
+	  --blauw-text: #1b92e4;
+	  --color-background: rgb(233,234,237);
+  
+	  --nav-background:#dcdfe6;
+  
+	  --section-background: #ffffff; 
+  
+	  --hover-text: #2196f3; 
+	  --drop-shadow: rgb(197, 197, 197);
+  
+	  --footer-background: rgb(42,43,60);
+	  --footer-tekst: #eee; 
+  }
+  
+  body{
+	  background-color: var(--color-background);
+  }
+  
+  header{
+	  background-color: var(--header-background);
+	  padding: .5em;
+	  /* position: sticky;
+	  z-index: 2; */
 
-nav a{
-	display:flex;
-	align-items:center;
-	column-gap:.25em;
-}
-
-  nav button {
-	justify-self:end;
-	background-color: var(--nav-background);
-	position: absolute ;
-   }
-
-header nav button{
-	background-color: var(--nav-background);
-	padding: 1em;
-}
-/*EIND*****BURGER MENU + CODE VAN DE LES****/
-
-main{
-	margin: 1em;
-}
-
-main section{
-	background-color: var(--section-background);
-	margin: 1em;
-	padding: 1em;
-}
-
-h1{
-	font-size: 2em;
-	padding: .5em;
-}
-
-h2{ 
-	font-size: 1.5em;
-}
-
-h3{
-	font-size: 1em;
-}
-
-li { 
-    list-style: none;
-}
-
-img{
-	width: 7em;
-}
-
-/****footer****/
-footer{
-	background-color: var(--footer-background);
-   color: var(--footer-tekst);
-	padding: 1em;
-}
-
-footer a{
-   color: var(--footer-tekst);
-   text-decoration:none;
-}
-
-footer img{
-width: 10em;
-}
-
-footer h3{
-	text-transform: uppercase;
-}
-footer section{
-   margin: 1em;
-}
-
-footer ul li{
-   margin: 0;
-   padding: 0;
-}
-/*EIND*****footer****/
+  
+  /*BURGER MENU + CODE VAN DE LES*/
+	  display: flex;
+	  align-items: center;
+  
+	  justify-content: space-between;
+  }
+  
+  /* KIJKEN OF NAV??? */
+  header section{
+	  display: flex;
+  }
+  
+  header section button{
+	  padding: 0.5em;
+  }
+  
+  header section button:nth-of-type(4) img{
+	  height:100%;
+	  width: 3em;
+  }
+  
+  header img {
+	  height:100%;
+	  width: 4em;
+  } 
+  
+  header a{
+	  text-decoration:none;
+	  color:var(--color-text)
+  }
+  
+  header button{
+	  display: flex; 
+	  align-items: center;
+	  gap: .25em;
+  
+	  background-color: var(--header-background);
+	  border: none;	
+  }
+  
+  header button img {
+	  height:100%;
+	  width: 2em;
+  }
+  
+  header button:nth-of-type(1){
+	  order: 4;
+  
+  }
+  
+  nav{
+	  margin-left: 3em;
+	  padding: 2em;
+	  background-color: var(--nav-background);
+  
+	  display: grid; 
+  
+	  position: fixed;
+	  z-index: 100; /*  boven de position:... elementen uit komen */
+	  inset: 0;
+	  translate: 100%;       
+	  transition: 1s;
+  }
+  
+  nav.toonMenu {
+	  translate: 0;
+	  position: absolute;
+	}
+  
+  nav a{
+	  display:flex;
+	  align-items:center;
+	  column-gap:.25em;
+  }
+  
+	nav button {
+	  justify-self:end;
+	  background-color: var(--nav-background);
+	  position: absolute ;
+	 }
+  
+  header nav button{
+	  background-color: var(--nav-background);
+	  padding: 1em;
+  }
+  /*EIND*****BURGER MENU + CODE VAN DE LES****/
+  
+  main{
+	  margin: 1em;
+  }
+  
+  main section{
+	  background-color: var(--section-background);
+	  margin: 1em;
+	  padding: 1em;
+  }
+  
+  h1{
+	  font-size: 2em;
+	  padding: .5em;
+  }
+  
+  h2{ 
+	  font-size: 1.5em;
+  }
+  
+  h3{
+	  font-size: 1em;
+  }
+  
+  li { 
+	  list-style: none;
+  }
+  
+  img{
+	  width: 7em;
+  }
+  
+  /****footer****/
+  footer{
+	  background-color: var(--footer-background);
+	 color: var(--footer-tekst);
+	  padding: 1em;
+  }
+  
+  footer a{
+	 color: var(--footer-tekst);
+	 text-decoration:none;
+  }
+  
+  footer img{
+  width: 10em;
+  }
+  
+  footer h3{
+	  text-transform: uppercase;
+  }
+  footer section{
+	 margin: 1em;
+  }
+  
+  footer ul li{
+	 margin: 0;
+	 padding: 0;
+  }
+  /*EIND*****footer****/
