--- a/styles/index.css
+++ b/styles/index.css
@@ -298,7 +298,6 @@ main section:nth-of-type(7) ul:nth-of-type(1){
 
 main section:nth-of-type(7) ul:nth-of-type(1) li{ 
     display: inline-block;
-
 } 
 
 main section:nth-of-type(7) a{
@@ -307,13 +306,13 @@ main section:nth-of-type(7) a{
 }
 
 
-main section:nth-of-type(7) ul:nth-of-type(2) li a{
-    /* display: grid;
+main section:nth-of-type(7) ul:nth-of-type(2) li {
+    display: grid;
     grid-template-columns: 0.2fr 0.3fr 1fr;
-    grid-template-rows: 0.2fr 0.2fr 0.2fr 0.2fr; */
+    grid-template-rows: 0.2fr 0.2fr 0.2fr 0.2fr;
 
-    display: flex;
-    align-content: flex-start;
+    /* display: flex;
+    align-content: flex-start; */
 }
 
 main section:nth-of-type(7) ul:nth-of-type(2) a img{
@@ -330,8 +329,8 @@ main section:nth-of-type(7) ul:nth-of-type(2) li button img{
 }
 
 main section:nth-of-type(7) a h3{
-    /* grid-column: 3;
-    grid-row: 1; */
+    grid-column: 3;
+    grid-row: 1;
 
     color: var(--hover-text);
     
