--- a/styles/index.css
+++ b/styles/index.css
@@ -38,7 +38,7 @@ main section:nth-of-type(1) img:nth-of-type(1){
 }
 
 main section:nth-of-type(1) img:nth-of-type(2){
-    width: 1em;
+    width: 1.2em;
 
     position: absolute;
     bottom: 1em;
@@ -46,7 +46,7 @@ main section:nth-of-type(1) img:nth-of-type(2){
 }
 
 main section:nth-of-type(1) img:nth-of-type(3){
-    width: 1em;
+    width: 1.2em;
 
     position: absolute;
     bottom: 1em;
@@ -56,6 +56,7 @@ main section:nth-of-type(1) img:nth-of-type(3){
 main section:nth-of-type(1) h2 {
     color: var(--footer-tekst);
     /* background-color: var(--color-text); */
+    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
     padding: 0.5em;
     padding-bottom: 0;
 
@@ -70,7 +71,7 @@ main section:nth-of-type(1) p:nth-of-type(1) {
     padding-bottom: 0;
 
     position: absolute;
-    bottom: 12em;
+    bottom: 9em;
 }
 
 main section:nth-of-type(1) p:nth-of-type(2) {
