--- a/styles/style.css
+++ b/styles/style.css
@@ -159,11 +159,15 @@
 	  background-color: var(--footer-background);
 	 color: var(--footer-tekst);
 	  padding: 1em;
+
+	  display: flex;
+	  flex-wrap: wrap;
   }
   
   footer a{
 	 color: var(--footer-tekst);
 	 text-decoration:none;
+	 font-size: 0.8em;
   }
   
   footer img{
@@ -172,7 +176,14 @@
   
   footer h3{
 	  text-transform: uppercase;
+	  font-size: 0.9em;
   }
+
+  footer p{
+	font-size: 0.9em;
+
+  }
+
   footer section{
 	 margin: 1em;
   }
@@ -181,4 +192,52 @@
 	 margin: 0;
 	 padding: 0;
   }
+/* Section 1 */
+  /* Eerste ul */
+  footer section:nth-of-type(1) ul:nth-of-type(1){
+	display: flex;
+	flex-wrap: wrap;
+
+	margin: 0.5em;
+  }
+
+ footer section:nth-of-type(1) ul:nth-of-type(1) li{
+	border: 1px solid var(--footer-tekst);
+	border-radius: 50%;
+
+  }
+
+  footer section:nth-of-type(1) ul:nth-of-type(1) img{
+	width: 1.2em;
+	margin: 0.5em;
+
+	display: flex;
+	align-content: center;
+  }
+
+  /* Tweede ul */
+  footer section:nth-of-type(1) ul:nth-of-type(2) li{
+	border: 1px solid var(--footer-tekst);
+	border-radius: 30px;
+	margin: 0.5em;
+  }
+
+  footer section:nth-of-type(1) ul:nth-of-type(2) li a{
+	display: flex;
+	flex-wrap: wrap;
+
+	font-size: 1em;
+  }
+
+  footer section:nth-of-type(1) ul:nth-of-type(2) li a p{
+
+  }
+
+  footer section:nth-of-type(1) ul:nth-of-type(2) img{
+	width: 1.5em;
+	margin: 0.5em;
+  }
+
+/* EIND section 1 */
+
   /*EIND*****footer****/
