--- a/styles/index.css
+++ b/styles/index.css
@@ -79,8 +79,6 @@ main section:nth-of-type(1) p:nth-of-type(2) {
     position: absolute;
     bottom: 1em;
 }
-
-
 /*EIND***section 1*/
 
 /*section 2*/
@@ -96,7 +94,8 @@ main section:nth-of-type(2) a{
     text-decoration: none;
     color: var(--color-text);
 }
-    /*eerste ul*/
+
+/*eerste ul*/
 main section:nth-of-type(2) ul:nth-of-type(1){
     overflow: initial;
     width: 100%;
@@ -108,9 +107,14 @@ main section:nth-of-type(2) ul:nth-of-type(1){
     
 main section:nth-of-type(2) ul:nth-of-type(1) li { 
     display: inline-block;
+    font-size: 0.9em;
+}
+
+main section:nth-of-type(2) ul:nth-of-type(1) li:nth-of-type(1) a { 
+    color: var(--blauw-text);
 }
     
-    /*tweede ul*/
+/*tweede ul*/
 main section:nth-of-type(2) ul:nth-of-type(2) li{ 
     display: grid;
 
@@ -219,10 +223,11 @@ main section:nth-of-type(3) ul li a p, main section:nth-of-type(4) ul li a p, ma
     color: var(--hover-text);
     font-weight: bold;
 } 
-
 /* EIND SECTION 3 + 4 + 5*/
 
 /*section 4*/
+
+
 /*EIND***section 4*/
 
 /*section 5*/
