--- a/styles/style.css
+++ b/styles/style.css
@@ -56,10 +56,15 @@
 	  height:100%;
 	  width: 3em;
   }
-  
-  header img {
-	  height:100%;
-	  width: 4em;
+
+  header h1 {
+	padding: 0;
+	
+
+	text-transform: uppercase;
+	font-size: 1.5em;
+	color: var(--footer-tekst);
+
   } 
   
   header a{
@@ -164,7 +169,7 @@
 	  flex-wrap: wrap;
   }
   
-  footer a{
+  footer ul li a, footer ul li a abbr{
 	 color: var(--footer-tekst);
 	 text-decoration:none;
 	 font-size: 0.8em;
@@ -227,10 +232,6 @@
 	flex-wrap: wrap;
 
 	font-size: 1em;
-  }
-
-  footer section:nth-of-type(1) ul:nth-of-type(2) li a p{
-
   }
 
   footer section:nth-of-type(1) ul:nth-of-type(2) img{
