--- a/styles/index.css
+++ b/styles/index.css
@@ -22,6 +22,11 @@
 	--footer-tekst: #eee; 
 }
 
+a, abbr{
+	text-decoration: none;
+  }
+  
+
 /*section 1*/
 main section:nth-of-type(1){
     margin: 1em;
@@ -91,7 +96,6 @@ main section:nth-of-type(2) {
 }
 
 main section:nth-of-type(2) a{
-    text-decoration: none;
     color: var(--color-text);
 }
 
@@ -180,7 +184,6 @@ main section:nth-of-type(2) > a{
     border: 1px solid var(--nav-background);
     padding: 10px;
     color: var(--color-text);
-    text-decoration: none;
     cursor: pointer;
     display: inline-block;
     text-align: center;
@@ -202,13 +205,8 @@ main section:nth-of-type(3) ul li, main section:nth-of-type(4) ul li, main secti
     padding-left: 0.5em;
 } 
 
-main section:nth-of-type(3) ul li a , main section:nth-of-type(4) ul li a, main section:nth-of-type(5) ul li a  { 
-    text-decoration: none;
-}
-
 main section:nth-of-type(3) img, main section:nth-of-type(4) img { 
     width: 9.3em; 
-
 } 
 
 main section:nth-of-type(3) ul li p, main section:nth-of-type(4) ul li p, main section:nth-of-type(5) ul li p { 
@@ -281,8 +279,7 @@ main section:nth-of-type(7) ul:nth-of-type(1) li{
     display: inline-block;
 } 
 
-main section:nth-of-type(7) ul:nth-of-type(1) a{
-    text-decoration: none;
+main section:nth-of-type(7) a{
     color: var(--color-text);
 }
 
@@ -301,17 +298,11 @@ main section:nth-of-type(7) ul:nth-of-type(2) li img{
     margin-top: 0.5em;
 }
 
-main section:nth-of-type(7) ul:nth-of-type(2) a{
-    text-decoration: none;
-    color: var(--color-text);
-}
-
 main section:nth-of-type(7) a h3{
     color: var(--hover-text);
 }
 
 main section:nth-of-type(7) a p{
-    color: var(--color-text);
     font-size: 0.9em;
 }
 
@@ -371,7 +362,6 @@ span:nth-of-type(5):before{
 
 /* Alle sections */
 section:nth-of-type(3) > a, section:nth-of-type(4) > a, section:nth-of-type(5) > a, section:nth-of-type(6) > a,  section:nth-of-type(7) > a { 
-    text-decoration: none;
     color: var(--color-text);
     
     display: flex;
