--- a/styles/index.css
+++ b/styles/index.css
@@ -168,16 +168,37 @@ main section:nth-of-type(2) a img{
 }
 
 main section:nth-of-type(2) a img:nth-of-type(2){
-    grid-column: -1;
+    grid-column: 2;
     grid-row: 3;
     
     width: 1em;
+    margin-left: 7.5em;
+}
+
+main section:nth-of-type(2) ul:nth-of-type(2) p:nth-of-type(3){
+    grid-column: 2;
+    grid-row: 3;
+    margin-left: 9.5em;
+
+    color: var(--gray-text);
+    font-size: .9em;
 }
 
 main section:nth-of-type(2) a img:nth-of-type(3){
+    grid-column: 2;
     grid-row: 3;
 
     width: 1em;
+    margin-left: 10.5em;
+}
+
+main section:nth-of-type(2) ul:nth-of-type(2) p:nth-of-type(4){
+    grid-column: 2;
+    grid-row: 3;
+    margin-left: 12.8em;
+
+    color: var(--gray-text);
+    font-size: .9em;
 }
 
 main section:nth-of-type(2) > a{
