--- a/styles/index.css
+++ b/styles/index.css
@@ -404,8 +404,7 @@ section:nth-of-type(4) li:nth-of-type(6) ol span:nth-of-type(3):before,
 section:nth-of-type(4) li:nth-of-type(6) ol span:nth-of-type(4):before{
     color: var(--span-ster);
     content: '\2605'; /* Full star in UTF-8 */
-    position: absolute;
-    
+    position: absolute; 
 }
 
 /*EIND***section 4*/
@@ -609,7 +608,7 @@ section:nth-of-type(3) > a, section:nth-of-type(4) > a, section:nth-of-type(5) >
     justify-content: end;
 
     /* position: absolute;
-    left: 540px; */
+    left: calc(80%); */
 }
 
 /*     
