--- a/styles/profile.css
+++ b/styles/profile.css
@@ -3,28 +3,31 @@
 }
 
 :root {
-	--body-background: rgb(233,234,237);
-	--nav-background:#dcdfe6;
-	--section-background: #ffffff; 
-	--footer-background: rgb(42,43,60);
-	
-   --dark-blue: #00619d;
-   
-   --black-text: #111;
-   --blue-text: #1675b6;
-   --gray-text: #7a7a7a;
-   --white-text: #eee;
- 
-   --drop-shadow: rgb(197, 197, 197);
-   --hover-text: #2196f3;
-   --span-ster: #ffd600;
+	color-scheme: light dark;
+		--body-background: light-dark (rgb(233,234,237), #18191a);
+		--nav-background: light-dark (#dcdfe6, #18191a);
+		--section-background: light-dark (#ffffff, #242526);
+		--footer-background: light-dark (rgb(42,43,60), #18191a);
+
+		--black-text: light-dark (#111, #eee) ;
+		--blue-text: light-dark #1675b6;
+		--white-text: light-dark (#eee, #111);
+
+		--drop-shadow: light-dark (rgb(197, 197, 197), #3e4042);
+
+
+	 --dark-blue: #00619d;
+	 --gray-text: #7a7a7a;
+
+	 --hover-text: #2196f3; 
+     --span-ster: #ffd600;
 }
 
 a, abbr{
 	text-decoration: none;
   }
-
-  /* main{
+/* 
+  main{
 	display: flex;
 	flex-wrap: wrap;
   } */
@@ -71,6 +74,42 @@ main section:nth-of-type(1) li:nth-of-type(1) button{
 /* EIND section 1 */
 
 /* Section 2 */
+main section:nth-of-type(2){
+	padding-left: 0;
+	padding-right: 0;
+}
+
+main section:nth-of-type(2) h2{
+	padding-left: 1em;
+}
+
+main section:nth-of-type(2) ul:nth-of-type(1){
+	background: var(--a-background);
+}
+
+main section:nth-of-type(2) ul:nth-of-type(1) li{
+	border: 1px solid var(--nav-background);
+	text-align: center;
+
+	padding-top: 0.5em;
+	padding-bottom: 0.5em;
+}
+
+main section:nth-of-type(2) ul:nth-of-type(1) li p:nth-of-type(1){
+	font-size: 18px;
+}
+
+main section:nth-of-type(2) ul:nth-of-type(1) li p:nth-of-type(2){
+	font-size: 12px;
+	text-transform: uppercase;
+	font-weight: bold;
+}
+
+main section:nth-of-type(2) ul:nth-of-type(1) li p:nth-of-type(3){
+	font-size: 14px;
+	color: var(--gray-text);
+
+}
 /* EIND section 2 */
 
 /* Section 3 */
