--- a/styles/style.css
+++ b/styles/style.css
@@ -13,23 +13,38 @@
   } */
   
   :root {
-	color-scheme: light dark;
-		--body-background: light-dark (rgb(233,234,237), #18191a);
-		--nav-background: light-dark (#dcdfe6, #18191a);
-		--section-background: light-dark (#ffffff, #242526);
-		--footer-background: light-dark (rgb(42,43,60), #18191a);
-
-		--black-text: light-dark (#111, #eee) ;
-		--blue-text: light-dark #1675b6;
-		--white-text: light-dark (#eee, #111);
-
-		--drop-shadow: light-dark (rgb(197, 197, 197), #3e4042);
-
-
+      --body-background: rgb(233,234,237);
+	  --nav-background:#dcdfe6;
+	  --section-background: #ffffff; 
+	  --footer-background: rgb(42,43,60);
+	  
 	 --dark-blue: #00619d;
+	 
+	 --black-text: #111;
+	 --blue-text: #1675b6;
 	 --gray-text: #7a7a7a;
+	 --white-text: #eee;
 
+	 --drop-shadow: rgb(197, 197, 197);
 	 --hover-text: #2196f3; 
+
+	 /* color-scheme: light dark;
+	 --body-background: light-dark (rgb(233,234,237), #18191a);
+	 --nav-background: light-dark (#dcdfe6, #18191a);
+	 --section-background: light-dark (#ffffff, #242526);
+	 --footer-background: light-dark (rgb(42,43,60), #18191a);
+
+	 --black-text: light-dark (#111, #eee) ;
+	 --blue-text: light-dark #1675b6;
+	 --white-text: light-dark (#eee, #111);
+
+	 --drop-shadow: light-dark (rgb(197, 197, 197), #3e4042);
+
+
+  --dark-blue: #00619d;
+  --gray-text: #7a7a7a;
+
+  --hover-text: #2196f3;  */
   }
   
   body{
@@ -127,20 +142,8 @@
 	transform: translateY(0);
   }
 
-  header > ul li:nth-of-type(12){
-    border-bottom: 1px solid var(--nav-background);
-	color: var(--blue-text);
-  }
-
-  
-  header > ul li:nth-of-type(11) > a,
-  header > ul li:nth-of-type(12) > a{
-	color: var(--blue-text);
-  }
-
   header > ul li a{
 	font-size: 14px;
-
 	margin: 0.3em;
 
 	display: flex;
@@ -149,12 +152,39 @@
 
   header > ul li:active{
 	background-color: var(--nav-background);
+
   }
 
   header > ul li a img{
 	width: 1.2em;
 	margin: 0.3em;
-  }  
+  }
+
+  header > ul li:nth-of-type(11) > a,
+  header > ul li:nth-of-type(12) > a{
+	color: var(--blue-text);
+  }
+
+  header > ul li:nth-of-type(12){
+    border-bottom: 1px solid var(--nav-background);
+	color: var(--blue-text);
+
+  }
+
+  header > ul li:nth-of-type(12) button{
+	text-transform: uppercase;
+	width: 3em;
+	height: 1.8em;
+	background-color: var(--section-background);
+	border: 1px solid var(--nav-background);
+	border-radius: 4px;
+	box-shadow: 0 0 3px var(--drop-shadow);
+
+  }
+
+  
+
+  
 
 /* form */
 header > form {
